tests/NormalTests/paczka2/big_fuzzy/55307097.err
Error in line 1: TeDUYIQ S611 79,0
Error in line 4: bSt S611 51,3
Error in line 7: bSt A642 69,0
Error in line 12: TeDUYIQ S618 19,0
Error in line 23: t5mx7jGbQfB S611 56,5
Error in line 31: T7Fg6vtl S611 12,8
Error in line 41: S618 A659 42,5
Error in line 46: FFk S611 62,1
Error in line 58: S618 A659 29,6
Error in line 63: FFk S611 15,9
Error in line 71: FFk A642 2<,8
Error in line 74: T7Fg6vtl A642 95,4
Error in line 62: S618 S611 16,0
Error in line 79: S618 A642 90,8
Error in line 83: bSt S611 24,9
Error in line 88: bSt S618 38,1
Error in line 102: bSt S611 73,18
Error in line 101: bSt S611 74,5
Error in line 106: xiKC S618 68,5
Error in line 107: xiKC S611 5,6
Error in line 113: bSt S611 93,4
Error in line 97: S618 A642 42,5
Error in line 119: S618 A659 97,9
Error in line 112: FFk A659 64,7
Error in line 135: xiKC A642 60,0
Error in line 138: xiKC S611 34,81
Error in line 131: S618 S611 67,1
Error in line 162: FFk A659 19,4
Error in line 147: xiKC S611 105,4
Error in line 165: xiKC A642 27,8
Error in line 166: xiKC S611 44,5
Error in line 175: TeDUYIQ A659 89,5
Error in line 173: bSt A642 87,0
Error in line 178: TeDUYIQ S611 40,7
Error in line 181: bSt A659 61,5
Error in line 182: TeDUYIQ S618 61,4
Error in line 191: FFk S611 78,9
Error in line 190: bSt A642 965,1
Error in line 192: FFk S618 26,0
Error in line 189: TeDUYIQ S611 23,7
Error in line 199: S618 S611 32,1
Error in line 200: TeDUYIQ A642 32,8
Error in line 204: TeDUYIQ S618 14,8
Error in line 212: xiKC A642 84,2
Error in line 205: TeDUYIQ S611 66,5
Error in line 213: xiKC A659 40,7
Error in line 219: bSt S618 79,61
Error in line 218: bSt A659 96,7
Error in line 214: TeDUYIQ A642 19,1
Error in line 225: FFk S618 27,3
Error in line 228: FFk S611 n4,5
Error in line 224: bSt S618 30,8
Error in line 230: xiKC S611 91,8
Error in line 227: FFk A659 33,3
Error in line 229: bSt S611 77,5
Error in line 242: A659
Error in line 239: TeDUYIQ A642 76,1
Error in line 245: SE18 SE11 E7,3
Error in line 237: FFk A642 41,3
